add search only and scrape endpoints
